--- a/templates/passwords-quiz.html
+++ b/templates/passwords-quiz.html
@@ -35,9 +35,9 @@
                 </div>
 
                 <div class="pull-xs-right">
-                    <a class="nav-item nav-link active" href="{{ url_for('passwords') }}"> Passwords </a>
+                    <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a>
                     <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
-                    <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
+                    <a class="nav-item nav-link active" href="{{ url_for('browser') }}"> Browser Security </a>
                     <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
                 </div>
 
@@ -66,50 +66,58 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-10 col-md-offset-1 container-fluid">
+            <div class="container">
                 <div class="card card-block no-border">
-                    <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('passwords') }}" role="button"> I'm not ready! Take me back to the module! </a>
-                </div>
 
-                <div class="card card-block">
+                <div id="question1" class="card card-block">
+                    <div id='q1-check' class="question-space"> &nbsp; </div>
+
                     <h5> 1. Which of these passwords is stronger? </h5>
 
-                    <div class="form-check">
+                    <div class="form-check indent">
                       <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question1" id="q1a1" value="option1">
+                        <input class="form-check-input" type="radio" name="question1" id="q1a1" value="false">
                         HeLLoThere
                       </label>
-                    </div>
 
-                    <div class="form-check">
+                        <br>
+
                       <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question1" id="q1a1" value="option2">
+                        <input class="form-check-input" type="radio" name="question1" id="q1a2" value="true">
                         H3110Th3r3
                       </label>
                     </div>
 
-                    <hr>
-                    <hr>
+                </div>
+
+                <div class="card card-block">
+                    <div id='q2-check' class="question-space"> &nbsp; </div>
 
                     <h5> 2. Which of these is a safe practice? </h5>
 
-                    <div class="form-check">
+                    <div class="form-check indent">
                       <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question2" id="q2a1" value="option1">
-                        Change the default password on your router
+                        <input class="form-check-input" type="radio" name="question2" id="q2a1" value="true">
+                        Changing the default password on your router.
                       </label>
                     </div>
 
-                    <div class="form-check">
+                    <div class="form-check indent">
                       <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question2" id="q2a2" value="option2">
-                        Leave the default password the same so that it can be easily found if forgotten.
+                        <input class="form-check-input" type="radio" name="question2" id="q2a2" value="false">
+                        Using the default password on your router.
                       </label>
                     </div>
+
                 </div>
 
-                <div class="card card-block no-border">
-                    <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('index') }}" role="button"> Start a new module! </a>
+                <div class="form-check" style="text-align: center;">
+                        <button class="submit" onclick="checkPW()"> Submit! </button>
+                </div>
+
+                <div class="card card-block no-border" style="text-align: center;">
+                    <a class="btn btn-primary btn-lg" href="{{ url_for('passwords') }}" role="button"> Back to the module! </a>
+                    <a id="p-button" class="btn btn-primary btn-lg" href="{{ url_for('index') }}" role="button"> Start a new module! </a>
                 </div>
             </div>
         </div>
@@ -117,8 +125,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="static/js/csam.js"></script>
-    <script src="static/js/passwordCracker.js"></script>
-    <script src="static/js/dictionaryLookup.js"></script>
 </body>
 
 </html>
