--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-xl-6 col-lg-12">
                     <div id="ms-card" class="card card-link transition">
-                        <a href="{{ url_for('index') }}">
+                        <a href="{{ url_for('mobile') }}">
 
                             <div class="row">
                                 <div class="col-sm-4" style="position: relative; width: 100%;">
@@ -134,7 +134,6 @@
                                     <p> Description for module. </p>
                                 </div>
                             </div>
-
                         </a>
                     </div>
                 </div>
