--- a/templates/socialengineering-quiz.html
+++ b/templates/socialengineering-quiz.html
@@ -35,8 +35,8 @@
                 </div>
 
                 <div class="pull-xs-right">
-                    <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a>
-                    <a class="nav-item nav-link active" href="{{ url_for('social_eng') }}"> Social Engineering </a>
+                    <a class="nav-item nav-link active" href="{{ url_for('passwords') }}"> Passwords </a>
+                    <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
                     <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
                     <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
                 </div>
@@ -66,67 +66,58 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-10 col-md-offset-1 container-fluid">
+            <div class="container">
                 <div class="card card-block no-border">
-                    <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('social_eng') }}" role="button"> I'm not ready! Take me back to the module! </a>
+
+                <div id="question1" class="card card-block">
+                    <div id='q1-check' class="question-space"> &nbsp; </div>
+
+                    <h5> 1. How would you distinguish a real website from a fake one? </h5>
+
+                    <div class="form-check indent">
+                      <label class="form-check-label">
+                        <input class="form-check-input" type="radio" name="question1" id="q1a1" value="false">
+                        Wrong answer.
+                      </label>
+
+                        <br>
+
+                      <label class="form-check-label">
+                        <input class="form-check-input" type="radio" name="question1" id="q1a2" value="true">
+                        Right answer.
+                      </label>
+                    </div>
+
                 </div>
 
                 <div class="card card-block">
-                    <h5> 1. How would you distinguish a real website from a fake one? </h5>
+                    <div id='q2-check' class="question-space"> &nbsp; </div>
 
-                    <div class="form-check">
+                    <h5> 2. Which of these in an email would indicate that it is from a legitimate business? </h5>
+
+                    <div class="form-check indent">
                       <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question1" id="q1a1" value="option1">
-                        Search for the word “fake” on the site
+                        <input class="form-check-input" type="radio" name="question2" id="q2a1" value="true">
+                        Right answer.
                       </label>
                     </div>
 
-                    <div class="form-check">
+                    <div class="form-check indent">
                       <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question1" id="q1a1" value="option2">
-                        Check the URL
+                        <input class="form-check-input" type="radio" name="question2" id="q2a2" value="false">
+                        Wrong answer.
                       </label>
                     </div>
-
-                    <hr>
-                    <hr>
-
-                    <h5> 2. This is also a question? </h5>
-
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question2" id="q2a1" value="option1">
-                        The email contains personal information such as last 4 digits of my social security number
-                      </label>
-                    </div>
-
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question2" id="q2a2" value="option2">
-                        The email directs me to a website to enter my credentials
-                      </label>
-                    </div>
-
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question2" id="q2a3" value="option3">
-                        Both of the above
-                      </label>
-                    </div>
-
-
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input class="form-check-input" type="radio" name="question2" id="q2a4" value="option4">
-                        None of the above
-                      </label>
-                    </div>
-
 
                 </div>
 
-                <div class="card card-block no-border">
-                    <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('index') }}" role="button"> Start a new module! </a>
+                <div class="form-check" style="text-align: center;">
+                        <button class="submit" onclick="checkPW()"> Submit! </button>
+                </div>
+
+                <div class="card card-block no-border" style="text-align: center;">
+                    <a class="btn btn-primary btn-lg" href="{{ url_for('social_eng') }}" role="button"> Back to the module! </a>
+                    <a id="se-button" class="btn btn-primary btn-lg" href="{{ url_for('index') }}" role="button"> Start a new module! </a>
                 </div>
             </div>
         </div>
@@ -134,8 +125,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="static/js/csam.js"></script>
-    <script src="static/js/passwordCracker.js"></script>
-    <script src="static/js/dictionaryLookup.js"></script>
 </body>
 
 </html>
