--- a/templates/browser.html
+++ b/templates/browser.html
@@ -77,22 +77,22 @@
                             <h3 id="cookies" class="card-title"> Cookies </h3>
                             <hr>
                             <h5> What is a cookie? </h5>
-                            <ul>
+                            <ul class="real-list">
                                 <li> A text file that stores data on your computer. </li>
                                 <li> It was invented to remember information about the user, in an attempt to personalize websites. </li>
                                 <li> Cookies can store saved passwords, track your browsing patterns. </li>
                             </ul>
                             <h5> What do cookies do? </h5>
-                            <ul>
+                            <ul class="real-list">
                                 <li> Have you ever noticed ads shown on your Facebook page consistently match your recent Google searches or purchases from Amazon? </li>
                                 <li> Cookies can be used to track what you buy or search in order to customize your advertising, in the hopes that you buy similar products. </li>
                                 <li> They can also store information, such Amazon using cookies to store products that you've shown interest into a "shopping cart." </li>
                             </ul>
                             <h5> How can you protect yourself? </h5>
-                            <ul>
+                            <ul class="real-list">
                                 <li> You can configure your browser settings to allow cookies only from sites you trust and disable from sites you don't. </li>
                                 <li> Follow the instructions specific to your browser below to configure cookies for specific sites. </li>
-                            </ul>
+                            </ul class="real-list">
                             <hr>
                             <div class="card text-xs-center"> </div>
                         </div>
@@ -100,20 +100,20 @@
                             <h4 id="plugins" class="card-title"> Plug-Ins </h4>
                             <hr>
                             <h5> What is a plug-in? </h5>
-                            <ul>
+                            <ul class="real-list">
                                 <li> Applications intended for use in the web browser such as Adobe Flash. </li>
                                 <li> Plug-Ins are programs, and such, are vulnerable to many of the same problems, including being poorly written or written with malicious intentions. </li>
                                 <li> Vulnerabilities in plug-ins can also allow attackers to install malware. </li>
                             </ul>
                             <h5> How can you protect yourself? </h5>
-                            <ul>
+                            <ul class="real-list">
                                 <li> Only install plug-ins from official sources, such as the Chrome Web Store or Firefox Addons. </li>
                                 <li> Be aware that while plug-ins from official sources are safer than third-party installations, they are not completely safe. </li>
                                 <li> Never install an unknown plug-in. </li>
                             </ul>
                             <hr>
                             <div class="card text-xs-center">
-                                <ul class="nav nav-tabs" role="tablist">
+                                <ul class="nav nav-tabs real-list" role="tablist">
                                     <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-plugins" role="tab">Chrome</a> </li>
                                     <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#firefox-plugins" role="tab">Firefox</a> </li>
                                     <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#ie-plugins" role="tab">Internet Explorer</a> </li>
@@ -136,14 +136,14 @@
                             <h4 id="popups" class="card-title"> Pop-Ups </h4>
                             <hr>
                             <h5> What is a pop-up? </h5>
-                            <ul>
+                            <ul class="real-list">
                                 <li> Pop-ups are small windows that are automatically opened when you visit a page. </li>
                                 <li> Most pop-ups are advertisements. </li>
                                 <li> Pop-ups can lead to unintentional downloads or take you to sites you don't mean to go to. </li>
                                 <li> Some pop-ups are 'chained,' making it difficult for you to close them, as they open another one as soon as they are closed. </li>
                             </ul>
                             <h5> How can you protect yourself? </h5>
-                            <ul>
+                            <ul class="real-list">
                                 <li> By default, most browsers block pop-ups. </li>
                                 <li> If, for some reason, you turn off your pop-up blocker, remember to turn it back on! </li>
                                 <li> Follow the instructions specific to your browser below to configure cookies for specific sites. </li>
