--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -99,7 +99,7 @@
 
                             <h5> What is a strong password? </h5>
 
-                            <ul>
+                            <ul class="real-list">
                                 <li> A strong password contains a combination of both uppercase and lowercase letters, digits, and symbols. </li>
                                 <li> It has at least 8 characters. </li>
                                 <li> It doesn't contain common words or phrases. </li>
@@ -107,9 +107,9 @@
 
                             <h5> Why do we need strong passwords? </h5>
 
-                            <ul>
+                            <ul class="real-list">
                                 <li> A <i>brute force attack</i> is a method of cracking passwords that tries all possible character combinations to find a password.
-                                    <ul>
+                                    <ul class="real-list">
                                         <li> A total of 2.1 &middot; 10<sup>11</sup> possibilities exist in a password consisting of 8 lowercase letters. </li>
                                         <li> A total of 2.8 &middot; 10<sup>12</sup> possibilities exist in a password consisting of 8 mixed-case letters. </li>
                                         <li> In general, the more types of characters and the more characters you have in your password, the better. </li>
@@ -120,9 +120,9 @@
                                 </li>
                             </ul>
 
-                            <ul>
+                            <ul class="real-list">
                                 <li> A <i>dictionary attack</i> is a method that compares your password to a list of commonly used or previously cracked passwords.
-                                    <ul>
+                                    <ul class="real-list">
                                         <li> No matter how long or complex a password is, it will be found if it is in the list. </li>
                                         <li> Unlike a brute force attack, dictionary attacks are not limited by time. </li>
                                         <li> The limitation is whether or not the password is in the list. </li>
@@ -228,7 +228,7 @@
 
                             <h5> What are default passwords? </h5>
 
-                            <ul>
+                            <ul class="real-list">
                                 <li> Manufacturers provide default usernames and passwords to make the initial setup of a device simpler. </li>
                                 <li> Default credentials are also used whenever a device is reset back to factory settings. </li>
                                 <li> Default passwords are usually simple, and not unique to each individual device. </li>
