--- a/templates/socialeng.html
+++ b/templates/socialeng.html
@@ -99,7 +99,7 @@
                             <h5> What is phishing? </h5>
                             <p> A malicious entity contacts you, masquerading as a legitimate business and asks for information, directs you to a false website that tries to obtain your information, or otherwise tries to exploit you. </p>
                             <h5> Phishing Warning Signs </h5>
-                            <ul>
+                            <ul class="real-list">
                                 <li> Requests for personal information </li>
                                 <li> Generic greeting </li>
                                 <li> Urgency </li>
@@ -167,7 +167,7 @@
                           </form>
 
                           Some tips to keep your information safe and out of the hands of attackers:
-                          <ul>
+                          <ul class="real-list">
                             <li>Be mindful of how much personal information you share on social networks.</li>
                             <li>Dispose of old computers and phones (any device with data) securely.</li>
                             <li>For password security verification questions, us a password for all answers. The answers to most security questions are things that an attacker can find out about you.</li>
