added secure browsing template

--- a/templates/browser.html
+++ b/templates/browser.html
@@ -68,6 +68,8 @@
                                     <li class="nav-item"> <a class="nav-link" href="#plugins"> Plug-Ins </a> </li>
                                     <hr>
                                     <li class="nav-item"> <a class="nav-link" href="#popups"> Pop-Ups </a> </li>
+                                    <hr>
+                                    <li class="nav-item"> <a class="nav-link" href="#secure_browsing"> Secure Browsing </a> </li>
                                 </ul>
                             </nav>
                         </div>
@@ -111,6 +113,7 @@
                                 <li> Be aware that while plug-ins from official sources are safer than third-party installations, they are not completely safe. </li>
                                 <li> Never install an unknown plug-in. </li>
                             </ul>
+                            <p> Select your browser to get instructions on how to disable plug-ins.</p>
                             <hr>
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs real-list" role="tablist">
@@ -148,7 +151,8 @@
                                 <li> If, for some reason, you turn off your pop-up blocker, remember to turn it back on! </li>
                                 <li> Follow the instructions specific to your browser below to configure cookies for specific sites. </li>
                             </ul>
-                            <hr>
+
+                            <p> Select your browser to get instructions on how to change your pop-up settings.</p>
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-popups" role="tab">Chrome</a> </li>
@@ -168,6 +172,17 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="card card-block">
+                            <h4 id="secure_browsing" class="card-title"> Secure Browsing </h4>
+                            <hr>
+                            <h5> What is HTTPS? </h5>
+                            <ul class="real-list">
+                                <li>  </li>
+                                <li>  </li>
+                                <li>  </li>
+                                <li>  </li>
+                            </ul>
                         </div>
                         <div class="card card-block no-border"> <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('browser_quiz') }}" role="button"> Take the quiz! </a> </div>
                     </div>
