--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -81,7 +81,7 @@
                                     </li>
                                     <hr>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#exercise"> Exercise </a>
+                                        <a class="nav-link" href="#exercise"> Password Cracking </a>
                                     </li>
                                     <hr>
                                     <li class="nav-item">
