--- a/templates/browser.html
+++ b/templates/browser.html
@@ -95,8 +95,6 @@
                                 <li> You can configure your browser settings to allow cookies only from sites you trust and disable from sites you don't. </li>
                                 <li> Follow the instructions specific to your browser below to configure cookies for specific sites. </li>
                             </ul class="real-list">
-                            <hr>
-                            <div class="card text-xs-center"> </div>
                         </div>
                         <div class="card card-block">
                             <h4 id="plugins" class="card-title"> Plug-Ins </h4>
@@ -178,10 +176,10 @@
                             <hr>
                             <h5> What is HTTPS? </h5>
                             <ul class="real-list">
-                                <li>  </li>
-                                <li>  </li>
-                                <li>  </li>
-                                <li>  </li>
+                                <li> HTTP (Hyper Text Transfer Protocol) is the protocol used when you connect to websites over the internet.  </li>
+                                <li> HTTPS is a secure version of HTTP that encrypts data, providing protection from eavesdropping and tampering. </li>
+                                <li> When using a non-secure connection, data is sent over the network in clear text. This means that anyone on the network can view the data being sent and received. </li>
+                                <li> Always look for a padlock icon in your browser showing that the connection is secure.</li>
                             </ul>
                         </div>
                         <div class="card card-block no-border"> <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('browser_quiz') }}" role="button"> Take the quiz! </a> </div>
