--- a/templates/socialengresults.html
+++ b/templates/socialengresults.html
@@ -224,7 +224,7 @@
                       <ul class="real-list">
                         <li>Be mindful of how much personal information you share on social networks.</li>
                         <li>Dispose of old computers and phones (any device with data) securely.</li>
-                        <li>For password security verification questions, us a password for all answers. The answers to most security questions are things that an attacker can find out about you.</li>
+                        <li>For password security verification questions, use a password for all answers. The answers to most security questions are things that an attacker can find out about you.</li>
                       </ul>
                     </div>
 
