added spearphishing image

--- a/templates/browser.html
+++ b/templates/browser.html
@@ -178,7 +178,7 @@
                             <ul class="real-list">
                                 <li> HTTP (Hyper Text Transfer Protocol) is the protocol used when you connect to websites over the internet.  </li>
                                 <li> HTTPS is a secure version of HTTP that encrypts data, providing protection from eavesdropping and tampering. </li>
-                                <li> When using a non-secure connection, data is sent over the network in clear text. This means that anyone on the network can view the data being sent and received. </li>
+                                <li> When using a non-secure connection such as HTTP, data is sent over the network in clear text. This means that anyone on the network can view the data being sent and received. </li>
                                 <li> Always look for a padlock icon in your browser showing that the connection is secure.</li>
                             </ul>
                         </div>
