--- a/templates/socialeng.html
+++ b/templates/socialeng.html
@@ -140,8 +140,8 @@
                             <p>
                               "Spear Phishing" is a specific type of phishing attack that appears to come from a trusted source. Attackers
                               can use information they find online to impersonate someone that the victim trusts, increasing the chance of a successful attack.
-
                             </p>
+                            <img src="/static/images/phishing-email.png">
                         </div>
                         <div class="card card-block">
                            <h5 id="privacy">Privacy</h5>
