--- a/templates/browser.html
+++ b/templates/browser.html
@@ -179,8 +179,10 @@
                                 <li> HTTP (Hyper Text Transfer Protocol) is the protocol used when you connect to websites over the internet.  </li>
                                 <li> HTTPS is a secure version of HTTP that encrypts data, providing protection from eavesdropping and tampering. </li>
                                 <li> When using a non-secure connection such as HTTP, data is sent over the network in clear text. This means that anyone on the network can view the data being sent and received. </li>
-                                <li> Always look for a padlock icon in your browser showing that the connection is secure.</li>
+                                <li> It is important to make sure that your connection is encrypted when entering sensitive information into a website, otherwise anyone can view this information as it travels over the network.</li>
+                                <li> You can tell that you are using a secured connection by the &quot;https:// &quot; prefix of your URL, or by the padlock icon. The padlock icon may vary by browser, but an example is shown below.</li>
                             </ul>
+                            <img src="/static/images/https.png">
                         </div>
                         <div class="card card-block no-border"> <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('browser_quiz') }}" role="button"> Take the quiz! </a> </div>
                     </div>
