--- a/templates/index.html
+++ b/templates/index.html
@@ -4,53 +4,45 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title> Cyber Security Awareness Module </title>
-    <!-- Core CSS -->
+
     <link type="text/css" rel="stylesheet" href="static/css/csam.css">
-    <!-- Roboto -->
+
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
     <link rel="apple-touch-icon" sizes="76x76" href="static/images/favicons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="static/images/favicons/apple-touch-icon-180x180.png">
     <link rel="icon" type="image/png" href="static/images/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="static/images/favicons/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="static/images/favicons/favicon-96x96.png" sizes="96x96">
     <link rel="shortcut icon" href="static/images/favicons/favicon.ico">
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+    <![endif]-->
 </head>
 
 <body onload="checkProgress()">
-    <header class="navbar navbar-right navbar-full navbar-light" role="banner">
-        <div class="clearfix">
-            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2"> &#9776; </button>
-        </div>
-        <div class="collapse navbar-toggleable-xs" id="bd-main-nav">
-            <nav class="nav navbar-nav">
 
-                <div class="pull-xs-left">
-                    <a class="nav-item nav-link active" href="{{ url_for('index') }}"> Home </a>
-                </div>
-
-                <div class="pull-xs-right">
-                    <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a>
-                    <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
-                    <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
-                    <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
-                </div>
-
-            </nav>
-        </div>
+    <header class="navbar navbar-right navbar-full navbar-light hidden-sm-down" role="banner">
+        <nav class="nav navbar-nav">
+            <div class="pull-xs-left">
+                <a class="nav-item nav-link active" href="{{ url_for('index') }}"> Home </a>
+            </div>
+            <div class="pull-xs-right">
+                <a class="nav-item nav-link" href="{{ url_for('passwords') }}"> Passwords </a>
+                <a class="nav-item nav-link" href="{{ url_for('social_eng') }}"> Social Engineering </a>
+                <a class="nav-item nav-link" href="{{ url_for('browser') }}"> Browser Security </a>
+                <a class="nav-item nav-link" href="{{ url_for('mobile') }}"> Mobile Security </a>
+            </div>
+        </nav>
     </header>
 
     <div class="container-fluid hidden-md-up p-x-0">
-        <div class="row m-t-2">
-            <div class="container-fluid">
-                <div class="card">
-                    <div class="card-block text-xs-center">
-                        <h3> Unfortunately, this content is unable to be viewed on this resolution. Please view it on a computer or change the orientation of your tablet. </h3> </div>
+        <div class="row">
+            <div class="card">
+                <div class="card-block text-xs-center">
+                    <h3> Unfortunately, this content is unable to be viewed on this resolution. Please view it on a computer or change the orientation of your tablet. </h3>
                 </div>
             </div>
         </div>
@@ -61,7 +53,8 @@
             <div class="jumbotron jumbotron-fluid col-md-12 m-b-1">
                 <div class="container">
                     <h1 class="display-3"> Cybersecurity Awareness </h1>
-                    <h4 class="lead"> Learn about passwords, protect yourself from social engineering, and get familiar with the basics of web security! </h4> </div>
+                    <h4 class="lead"> Learn about passwords, protect yourself from social engineering, and get familiar with the basics of web security! </h4>
+                </div>
             </div>
         </div>
         <div class="container-fluid">
@@ -84,6 +77,7 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="col-xl-6 col-lg-12">
                     <div id="se-card" class="card card-link transition">
                         <a href="{{ url_for('social_eng') }}">
@@ -102,6 +96,7 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="col-xl-6 col-lg-12">
                     <div id="bs-card" class="card card-link transition">
                         <a href="{{ url_for('browser') }}">
@@ -120,6 +115,7 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="col-xl-6 col-lg-12">
                     <div id="ms-card" class="card card-link transition">
                         <a href="{{ url_for('mobile') }}">
@@ -134,14 +130,16 @@
                                     <p> Description for module. </p>
                                 </div>
                             </div>
+
                         </a>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="assets/js/csam.js"></script>
+    <script src="static/js/csam.js"></script>
 </body>
 
 </html>
